# auto_test_platform

./: .env.example  .gitignore  Dockerfile  README.md  UI_ENGINE_INTEGRATION_SUMMARY.md  docker-compose.yml  requirements.txt  run.py  setup_local_model.py  test_llm_gateway.py  test_local_model.py  test_local_simple.py
code-factory/: .env.example  .gitignore  README.md  pyproject.toml
code-factory/agents/: __init__.py  base_agent.py  orchestrator.py
code-factory/config/: review_gates.yaml  routing_rules.yaml  settings.yaml
code-factory/config/environments/: development.yaml  production.yaml  testing.yaml
code-factory/migrations/: 001_initial_schema.sql
code-factory/rag/: __init__.py  chunker.py  document_loader.py  index_manager.py  pipeline.py  vector_store.py
code-factory/rag/loaders/: __init__.py  markdown_loader.py  pdf_loader.py  source_code_loader.py  swagger_loader.py  word_loader.py
code-factory/src/: __init__.py  main.py
code-factory/src/core/: __init__.py  config.py  exceptions.py  interfaces.py  logging.py  models.py
code-factory/tests/: __init__.py  conftest.py
code-factory/tests/unit/: test_base_agent.py  test_chunker.py  test_config.py  test_document_loader.py  test_exceptions.py  test_index_manager.py  test_logging.py  test_main.py  test_markdown_loader.py  test_model_router.py  test_orchestrator.py  test_pdf_loader.py  test_rag_pipeline.py  test_review_gate.py  test_source_code_loader.py  test_swagger_loader.py  test_vector_store.py  test_word_loader.py
code-factory/tools/: __init__.py  model_router.py  review_gate.py
doc/: INDEX.md  (+67 more)
(+483 files in other folders)
