[tool.poetry]
name = "code-factory"
version = "0.1.0"
description = "QA Code Factory 智能测试自动化平台 - Multi-Agent 协作与 RAG 技术实现测试用例智能生成"
authors = ["Code Factory Team"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "agents" },
    { include = "rag" },
    { include = "tools" },
]

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.40.0"
langgraph = "^0.2.0"
llama-index = "^0.11.0"
pgvector = "^0.3.0"
pydantic-settings = "^2.3.0"
structlog = "^24.1.0"
asyncpg = "^0.29.0"
pyyaml = "^6.0"
python-docx = "^1.1.0"
pypdf2 = "^3.0.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
hypothesis = "^6.100.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
